<resources>
    <string name="app_name">Exchanger</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_password_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="status_fmt">User: %1$s</string>
    <string name="verify_email_address">Verify email address</string>
    <string name="back">Back</string>
    <string name="verify_text">We have sent an email with a confirmation link to your email address.</string>
    <string name="error_weak_password">The given password is invalid</string>
    <string name="error_password_mismatch">Password mismatch</string>
    <string name="error_invalid_email">The email address is badly formatted</string>
    <string name="error_invalid_email_or_password">The email address or password that you entered is not correctly</string>
    <string name="error_user_exists">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address</string>
    <string name="menu_logout">Log out</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="accout_not_found">Couldn\'t find your account</string>
    <string name="email_not_verify">Please verify your email address</string>
    <string name="required">Required</string>
    <string name="menu_filter">Filter</string>
    <string name="filter_title">Filters</string>
    <string name="content_description_media">Media</string>
    <string name="menu_like">Add to favourite</string>
    <string name="title_activity_maps">Map</string>
    <string name="meters">meters</string>
    <string name="kilometers">kilometers</string>
    <string name="kilometers_short">km</string>
    <string name="menu_add">Add product</string>
    <string name="menu_done">Upload product</string>
    <string name="add_product_title">Add New Product</string>
    <string name="no_location_selected">No location selected</string>
    <string name="error_publish_product">Error publishing product! Try it again</string>
    <string name="error_adding_exchange">Error adding exchange! Try it again</string>
    <string name="dialog_product_publication">Product publication</string>
    <string name="wait">Please wait…</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_publication_success">Product published successfully!</string>
    <string name="dialog_exchange_added_success">Exchange added successfully!</string>
    <string name="dialog_exchange_already_exist">Exchange already exist</string>
    <string name="go_to_product">Go to product</string>

    <string name="category_all">All</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_electronics">Electronics</string>
    <string name="category_furniture">Furniture</string>
    <string name="category_household">Household products</string>
    <string name="category_tools">Tools</string>
    <string name="category_children">Children goods</string>
    <string name="category_pet">Pet supplies</string>
    <string name="category_food">Food</string>
    <string name="category_sport">Sporting goods</string>
    <string name="category_cosmetics">Cosmetics</string>
    <string name="category_others">Others</string>

    <string name="dialog_exhange_to">Exchange to</string>
    <string name="cancel">Cancel</string>
    <string name="suggest">suggest</string>

    <string name="apply_filters">Apply filters</string>
    <string name="menu_clear_selections">Clear filters</string>
    <string name="dialog_no_exchange_ptoducts">You do not have suitable products for the exchange</string>
    <string name="ok">OK</string>
    <string name="exchange_title">Proposed Exchanges</string>
    <string name="dialog_no_category_selected">No category selected</string>
    
    <string name="tab_offers">Offers</string>
    <string name="tab_accepted">Accepted</string>
    <string name="tab_refused">Refused</string>
    <string name="reset_password_email_send">Password reset email has been sent to your email</string>
    <string name="tab_my">My</string>
    <string name="product_images">Product images</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="product_description">Product description</string>
    <string name="exchange_for">Exchange for</string>
    <string name="product_location">Product location</string>
    <string name="map_container">Map</string>
    <string name="distance_range">Distance Range</string>
    <string name="text_meters">500 meters</string>
    <string name="text_km">10 km</string>
    <string name="categories">Categories</string>
    <string name="text_title">Title</string>
    <string name="seller">Seller</string>
    <string name="text_name">Name</string>
    <string name="message">Message</string>
    <string name="exchange">Exchange</string>
    <string name="description">Description</string>
    <string name="exchange_to">Exchange to</string>
    <string name="text_clothes">Clothes</string>
    <string name="location">Location</string>
    <string name="sign_in_with_your_account">Sign in with your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="or">or</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="username">Username</string>
    <string name="exhibited">Exhibited</string>
    <string name="text_zero">0</string>
    <string name="exchanges">Exchanges</string>
    <string name="my_products">My products</string>
    <string name="add_images">Add images</string>
    <string name="discussed_product">Discussed product</string>
    <string name="open_product">Open product</string>
    <string name="text_date">01.01.2020</string>
    <string name="text_message">Message content</string>
    <string name="text_time">10:20</string>
    <string name="reading_status">Reading status</string>
    <string name="text_to_product_title">To product title</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="took_place">Took place</string>
    <string name="delete">Delete</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="likes_count">Likes count</string>
    <string name="added_to_favourite">added to favourite</string>
    <string name="turn_on_your_location">Turn On Your Location</string>
    <string name="allow_access_to_your_location">Allow access to your location to start exchanging products!</string>
    <string name="allow">Allow</string>
    <string name="nothing_found">Nothing</string>
    <string name="no_products_found">No products found</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_messages">Messages</string>
    <string name="title_account">Account</string>
    <string name="product_deleted">Sorry, the product has been deleted or exchanged.</string>
    <string name="current_position">Current Position</string>
    <string name="selected_position">Selected Position</string>
    <string name="remove">Remove</string>
    <string name="make_main">Make the main</string>
    <string name="all_photos">All of your photos</string>
    <string name="selected_photos">Selected photos</string>
    <string name="photos_limit">You can\'t select any more</string>
    <string name="only_photos">I need a photo!</string>
    <string name="distance_meters">%1$d meters</string>
    <string name="distance_km">%1$.1f km</string>
    <string name="new_exchange">New exchange!</string>
    <string name="new_exchange_message">You were offered to exchange goods</string>
    <string name="delete_product">Delete product</string>
    <string name="delte_product_confirmation">Are you sure you want to remove the product</string>
    <string name="delete_product_error">An error occurred while deleting the product</string>
    <string name="favourite_remove">Product removed from favorites</string>
    <string name="undo">UNDO</string>
    <string name="product">Product</string>
    <string name="exchange_accepted">Your exchange accepted</string>
    <string name="exchange_refused_title">Exchange failed</string>
    <string name="exchange_refused">Your exchange refused</string>
    <string name="new_message">New message</string>
    <string name="use_last_know_location">Use last know location</string>
    <string name="exchange_confirmed_title">Exchange complete</string>
    <string name="exchange_confirmed">Your exchange is confirmed</string>

</resources>
