<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.FilterActivity">

    <LinearLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar.Light" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:scrollingCache="true">

            <LinearLayout
                android:id="@+id/filter_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_mlarge"
                android:paddingTop="@dimen/spacing_mlarge"
                android:paddingRight="@dimen/spacing_mlarge"
                android:paddingBottom="@dimen/spacing_mlarge">

                <TextView
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="Distance Range" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/filter_seek_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:min="5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/filter_distance_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="500 meters"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/filter_distance_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10 km"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_60" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_middle"
                        android:background="@color/grey_10" />

                </LinearLayout>

                <TextView
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="Categories" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/categories_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_all" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_clothes" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_electronics" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_furniture" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_household" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_tools" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_children" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_pet" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_food" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_sport" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_cosmetics" />

                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        android:id="@+id/category_11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onCategoryClick"
                        android:text="@string/category_others" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/filter_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/apply_filters"
        android:text="@string/apply_filters"
        app:icon="@drawable/ic_done"
        app:layout_anchor="@id/filter_container"
        app:layout_anchorGravity="bottom|center"
        android:textColor="@android:color/white"
        app:iconTint="@android:color/white"
        app:backgroundTint="@color/colorPrimary" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>