<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_spacing"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="@dimen/cat_card_rich_media_demo_min_height">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:background="@android:color/transparent"
            app:backgroundTint="@color/material_on_surface_emphasis_medium"
            app:backgroundTintMode="add"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cat_card_double_spacing"
            android:paddingBottom="@dimen/cat_card_single_spacing"
            android:orientation="vertical">

            <TextView
                style="?attr/textAppearanceHeadline5"
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cat_card_single_spacing"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/text_title" />

            <TextView
                style="?attr/textAppearanceSubtitle1"
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cat_card_double_spacing"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/cat_card_triple_spacing"
                android:layout_marginBottom="@dimen/cat_card_single_spacing"
                android:background="?attr/dividerHorizontal" />

            <TextView
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cat_card_double_spacing"
                android:layout_marginBottom="@dimen/cat_card_single_spacing"
                android:text="@string/exchange_to" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cat_card_double_spacing"
            android:paddingBottom="@dimen/cat_card_single_spacing">

            <ImageView
                android:id="@+id/to_product_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginStart="@dimen/cat_card_single_spacing"
                android:orientation="vertical">

                <TextView
                    style="?attr/textAppearanceHeadline6"
                    android:id="@+id/to_product_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/text_to_product_title" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_exchange_offers_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/cat_card_single_spacing"
            android:paddingLeft="@dimen/cat_card_single_spacing"
            android:paddingRight="@dimen/cat_card_single_spacing"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/product_exchange_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                android:text="@string/accept"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/product_exchange_refuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                android:text="@string/refuse"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/product_exchange_accept_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/cat_card_single_spacing"
            android:paddingLeft="@dimen/cat_card_single_spacing"
            android:paddingRight="@dimen/cat_card_single_spacing"
            android:visibility="gone"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/product_exchange_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                android:text="@string/message" />

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:id="@+id/product_exchange_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/cat_card_single_spacing"
                android:text="@string/took_place"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>