<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/album_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:minHeight="?attr/listPreferredItemHeight"
    android:foreground="?attr/selectableItemBackground"
    android:background="?android:attr/colorBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/room_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.MediumComponent" />

    <TextView
        android:id="@+id/room_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:text="@string/text_name"
        app:layout_constraintBottom_toTopOf="@+id/last_msg"
        app:layout_constraintEnd_toStartOf="@id/last_time"
        app:layout_constraintStart_toEndOf="@id/room_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/last_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceBody2"
        android:text="@string/text_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/last_time"
        app:layout_constraintStart_toEndOf="@id/room_image"
        app:layout_constraintTop_toBottomOf="@+id/room_title" />

    <TextView
        android:id="@+id/last_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_time"
        app:layout_constraintBottom_toTopOf="@+id/unread_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unread_count"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/shape_circle_red"
        android:gravity="center"
        android:text="@string/text_zero"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/last_msg"/>

</androidx.constraintlayout.widget.ConstraintLayout>